--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -2,10 +2,20 @@ html,body,#app{
     height:100%;
     margin:0;
     padding:0;
+    min-width: 1200px;
   }
   .el-submenu__title,.el-menu-item{
     font-size: 13px;
 }
 i.iconfont {
   padding-right: 15px;
+}
+.box-card{
+  margin-top:15px;
+  box-shadow: 0 1px 1px rgba(0 , 0, 0, 0.15) !important;
+}
+
+.el-table {
+  margin-top: 15px;
+  font-size: 12px;
 }
