商品管理里面的商品列表以及添加商品完成

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -19,3 +19,10 @@ i.iconfont {
   margin-top: 15px;
   font-size: 12px;
 }
+.el-step__title {
+  font-size: 12px;
+}
+.ql-editor,
+.ql-blank {
+  min-height: 200px;
+}
